Fix some markup issues

--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -71,11 +71,12 @@ or anything else, spreading the word for example.
 
 
 <h2 id="Build_150608">Build 150608</h2>
-	<li>Quake mode enabled by `-quake` command line switch was not shown in Fast Configuration dialog. </li>
-	<li>Suggest the task user specified by `ConEmu.exe -cmd {cmd}` in Fast Configuration dialog. </li>
-	<li>Don't set default task in Fast Configuration dialog, use exact `-cmd ...` command specified by user. </li>
+<ul>
+	<li>Quake mode enabled by <code>-quake</code> command line switch was not shown in Fast Configuration dialog. </li>
+	<li>Suggest the task user specified by <code>ConEmu.exe -cmd {cmd}</code> in Fast Configuration dialog. </li>
+	<li>Don't set default task in Fast Configuration dialog, use exact <code>-cmd ...</code> command specified by user. </li>
 	<li>gh#151: Do (quake) animation after starting RealConsole creation. </li>
-	<li>Add `-here` switch description in the About dialog. </li>
+	<li>Add <code>-here</code> switch description in the About dialog. </li>
 	<li>Ensure all default bash tasks names will be unique. </li>
 	<li>Always reset FARHOME env.var when creating default Far tasks. </li>
 	<li>Move checkboxes ‘Add ConEmu??? to PATH’ to separate page ‘Environment’. </li>
@@ -147,7 +148,7 @@ or anything else, spreading the word for example.
 	<li>Warn if MacType hookers are loaded in ConEmuC/ConEmuC64. User have to exclude these processes in the MacType configuration. </li>
 	<li>Allow to quit ConEmu by cross-clicking in the ‘Fast configuration’ dialog. </li>
 	<li>Startup task field was not filled properly in the Fast configuration dialog sometimes. </li>
-	<li>User had to press `Enter` to start find text from SearchBox if the match was above visible area. </li>
+	<li>User had to press <code>Enter</code> to start find text from SearchBox if the match was above visible area. </li>
 	<li>Clean up ConEmu_Tilde.xml from default settings. </li>
 </ul>
 
@@ -156,7 +157,7 @@ or anything else, spreading the word for example.
 <ul><li>DefTerm. First VisualStudio debugging session was not processed by DefTerm. </li>
 	<li>Default settings were not applied on first start (suggested startup task). </li>
 	<li>gh#104: Add default task for Git-for-Windows-v2. </li>
-	<li>gh#107: Quoted Task names were not working after ConEmu.exe `-cmd` argument. </li>
+	<li>gh#107: Quoted Task names were not working after ConEmu.exe <code>-cmd</code> argument. </li>
 	<li>Warning 'Maximum real console size was reached' was appeared sometimes during several splits tab closing. </li>
 </ul>
 
