Move 2014.xx.xx entries to Whats_New_3.html

--- a/en/Whats_New_2.html
+++ b/en/Whats_New_2.html
@@ -10,10 +10,13 @@ breadcrumbs:
    title: WhatsNew
 ---
 
-<!-- Content starts -->
+<h1> ConEmu's changelog 120101..131225 </h1>
 
-<h2 id="h0"><a name="Более_новые_записи"></a>Более новые записи<a href="#Более_новые_записи" class="section_anchor"></a></h2>
-<ul><li><a href="Whats_New.html">Builds 140104 .. текущая</a> </li></ul>
+<h2 id="Newer_entries"> Newer entries </h2>
+<ul>
+	<li><a href="Whats_New.html">Builds 150111..current</a> </li>
+	<li><a href="Whats_New.html">Builds 140104..141221</a> </li>
+</ul>
 
 <h2><a name="Build_131225"></a>Build 131225<a href="#Build_131225" class="section_anchor"></a></h2>
 <ul><li><a title="Make source tree easier to use by converting files to UTF-8 format" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1406">Issue 1406&nbsp;</a>: Sources was converted to utf-8 (mostly by Rick Sladkey). </li>
@@ -1672,8 +1675,10 @@ print: &quot;qqq&quot;; WindowMinimize</pre>
 <h2><a name="Build_120101"></a>Build 120101<a href="#Build_120101" class="section_anchor"></a></h2>
 <ul><li>Same as build 120102. May be used for AutoUpdate testing. </li></ul>
 
-<h2><a name="Более_старые_записи"></a>Более старые записи<a href="#Более_старые_записи" class="section_anchor"></a></h2>
-<ul><li><a href="Whats_New_1.html">Builds 090707 .. 111220</a> </li>
-<li><a href="https://conemu-maximus5.googlecode.com/svn/trunk/ConEmu-alpha/Release/ConEmu/WhatsNew-ConEmu.txt" rel="nofollow">Полный лог изменений на SVN</a> </li></ul>
+<h2 id="Older_entries"> Older entries </h2>
+<ul>
+	<li><a href="Whats_New_1.html">Builds 090707..111220</a> </li>
+	<li><a href="https://github.com/Maximus5/ConEmu/blob/master/Release/ConEmu/WhatsNew-ConEmu.txt" rel="nofollow">Full changelog on GitHub</a> </li>
+</ul>
 
 <!-- Content ends -->
