Add English/Russian language switch

--- a/en/AnsiEscapeCodes.html
+++ b/en/AnsiEscapeCodes.html
@@ -6,6 +6,10 @@ description: "List of ANSI sequences supported by ConEmu. Xterm 256 and 24bit co
 breadcrumbs:
  - url: TableOfContents.html#features
    title: Features
+
+otherlang:
+   eng: /en/AnsiEscapeCodes.html
+   rus: /ru/AnsiEscapeCodes.html
 ---
 
 <!-- Content starts -->
