--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -6,6 +6,10 @@ description: Frequenly asked user questions about ConEmu usage
 breadcrumbs:
  - url: TableOfContents.html#conemu
    title: ConEmu
+
+otherlang:
+   eng: /en/ConEmuFAQ.html
+   rus: /ru/ConEmuFAQ.html
 ---
 
 <!-- Content starts -->
