--- a/en/TabletPC.html
+++ b/en/TabletPC.html
@@ -8,6 +8,10 @@ description: "Using ConEmu on TabletPC, gestures and taps."
 breadcrumbs:
  - url: TableOfContents.html#controls
    title: Controls
+
+otherlang:
+   eng: /en/TabletPC.html
+   rus: /ru/TabletPC.html
 ---
 
 <!-- Content starts -->
