--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -6,6 +6,10 @@ breadcrumbs:
    title: ConEmu
  - url: WhatsNew.html
    title: WhatsNew
+
+otherlang:
+   eng: /en/Whats_New.html
+   rus: /ru/Whats_New.html
 ---
 
 <h1 id="h0">ConEmu changes log</h1>
