--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ description: "ConEmu-Maximus5 is a full-featured local terminal for Windows devs
   Get better console window with tabs, splits, Quake style, copy+paste, DosBox and PuTTY integration, and much more."
 
 og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
+
+otherlang:
+   eng: /
+   rus: /ru/index.html
 ---
 
 {% include index_en.html %}
