--- a/donate.html
+++ b/donate.html
@@ -9,6 +9,10 @@ noindex: true
 breadcrumbs:
  - url: TableOfContents.html#conemu
    title: ConEmu
+
+otherlang:
+   eng: /donate.html
+   rus: http://www.conemu.ru/donate.html
 ---
 
 
