Add more aliases

--- a/en/SplitScreen.html
+++ b/en/SplitScreen.html
@@ -1,5 +1,8 @@
 ---
-redirect_from: /ru/SplitScreen.html
+redirect_from:
+ - /ru/SplitScreen.html
+ - /ru/Panes.html
+ - /en/Panes.html
 
 title: "ConEmu | Split Screen or Panes"
 
