--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -1,5 +1,5 @@
 ---
-title: ConEmu | поддержка ANSI X3.64 и xterm-256
+title: ConEmu | Поддержка ANSI X3.64 и xterm-256
 
 description: "Список кодов ANSI последовательностей поддерживаемых в ConEmu. Xterm 256 и 24bit цветовые расширения. Примеры использования."
 
