--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -35,6 +35,23 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150629">Build 150629</h2>
+<ul>
+	<li>Attach (Win+G) was not succeeded if ConEmu has different bitness. </li>
+	<li>Grab palette from Win+G attached consoles (Vista+) and create new
+    if matching one was not found. These palettes ‘#Attached:XX’ are not
+    saved automatically, but will be when user presses ‘Save settings’ button
+    in the settings dialog. </li>
+	<li>gh#193: Show hookers warning once per day. </li>
+	<li>Show real names for ‘Win+Number’ and ‘Win+Arrows’ on the Controls page. </li>
+	<li>Search for static text control in the Settings dialog was failed. </li>
+	<li>Issue 1977: Don't change RealConsole height on tabs auto-show/hide,
+    resize ConEmu window height instead. </li>
+	<li>Add some urls to ConEmu.nuspec (chocolatey). </li>
+	<li>When tabs are auto shown icon was not loaded for the first tab. </li>
+	<li>Environment variables export was improved (some internal fixes). </li>
+</ul>
+
 <h2 id="Build_150621">Build 150621</h2>
 <ul>
 	<li>Use recommended launcher for Git-For-Windows bash (default tasks). </li>
