ConEmu 150705 What's New

--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -35,6 +35,16 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150705">Build 150705</h2>
+<ul>
+	<li>Script <code>ConEmu/GitShowBranch.cmd</code> was improved. </li>
+	<li>Highlight & goto was broken at least for powershell scripts (c8c386a regression).
+    Only file name (path) was highlighted without following line number. </li>
+	<li>Highlight & goto detector was failed if mouse was before first backslash of the path. </li>
+	<li>gh#205: TabBar was not shown on startup in some monitor configurations (bacc66d regression). </li>
+</ul>
+
+
 <h2 id="Build_150701">Build 150701</h2>
 <ul>
 	<li>Add optional '/Silent' switch to suppress environment exporting messages.
