--- a/en/GuiMacro.html
+++ b/en/GuiMacro.html
@@ -57,8 +57,8 @@ GuiMacro may be triggered from many places, for example from command line or <a 
 	<li><a href="#Scroll">Scroll(&lt;Type&gt;,&lt;Direction&gt;,&lt;Count=1&gt;)</a></li>
 	<li><a href="#Select">Select(&lt;Type&gt;,&lt;DX&gt;,&lt;DY&gt;,&lt;HE&gt;)</a></li>
 	<li><a href="#SetDpi">SetDpi(&lt;DPI&gt;)</a></li>
-	<li><a href="SetOption">SetOption(&quot;Check&quot;,&lt;ID&gt;,&lt;Value&gt;)</a></li>
-	<li><a href="SetOptionName">SetOption(&quot;&lt;Name&gt;&quot;,&lt;Value&gt;[,&lt;IsRelative&gt;])</a></li>
+	<li><a href="#SetOption">SetOption(&quot;Check&quot;,&lt;ID&gt;,&lt;Value&gt;)</a></li>
+	<li><a href="#SetOptionName">SetOption(&quot;&lt;Name&gt;&quot;,&lt;Value&gt;[,&lt;IsRelative&gt;])</a></li>
 	<li><a href="#Settings">Settings([&lt;PageResourceId&gt;])</a></li>
 	<li><a href="#Shell">Shell(&quot;&lt;Verb&gt;&quot;,&quot;&lt;File&gt;&quot;[,&quot;&lt;Parms&gt;&quot;[,&quot;&lt;Dir&gt;&quot;[,&lt;ShowCmd&gt;]]])</a></li>
 	<li><a href="#Sleep">Sleep(&lt;Milliseconds&gt;)</a></li>
