--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -45,7 +45,7 @@ or anything else, spreading the word for example.
 	<ul>
         <li>If user omit dst file name - try to get it from Url. </li>
         <li>If "-" was specified as dst file name or output is redirected - just write contents to stdout. </li>
-        <li>New switch ‘-agent <name>’ was implemented. </li>
+        <li>New switch ‘-agent &lt;name&gt;’ was implemented. </li>
     </ul>
     </li>
 </ul>
