Describe 'Tag(11,...)' GuiMacro

--- a/en/GuiMacro.html
+++ b/en/GuiMacro.html
@@ -472,7 +472,8 @@ Status(1[,&quot;&lt;Text&gt;&quot;])
    Cmd==7:  activate console by number, Parm=(1-based console index)
    Cmd==8:  show tabs list menu (indiffirent Far/Not Far)
    Cmd==9:  close active tab, same as Close(3)
-   Cmd==10: switches visible split-panes, Parm=(1,-1)</code></pre>
+   Cmd==10: switches visible split-panes, Parm=(1,-1)
+   Cmd==11: activates tab by name, title or process name</code></pre>
 
 <h4><a name="Task"></a>Start specified <a href="Tasks.html">Task</a><a href="#Task" class="section_anchor"></a></h4>
 <pre><code>Task(Index[,&quot;Dir&quot;])
