--- a/en/CrashDump.html
+++ b/en/CrashDump.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/CrashDump.html
 
 title: "ConEmu | Crash Dump"
+
+readalso:
+ - url: MemoryDump.html
+   title: "Creating memory dumps"
 ---
 
 <!-- Content starts -->
