--- a/en/MemoryDump.html
+++ b/en/MemoryDump.html
@@ -5,6 +5,10 @@ redirect_from:
  - /ru/MemoryDump.html
 
 title: "ConEmu | MemoryDump"
+
+readalso:
+ - url: CrashDump.html
+   title: "Automatic crash dumps"
 ---
 
 <!-- Content starts -->
