--- a/en/CrashDump.html
+++ b/en/CrashDump.html
@@ -6,6 +6,10 @@ title: "ConEmu | Crash Dump"
 readalso:
  - url: MemoryDump.html
    title: "Creating memory dumps"
+
+breadcrumbs:
+ - url: TableOfContents.html#feedback
+   title: Feedback
 ---
 
 <!-- Content starts -->
