--- a/en/LogFiles.html
+++ b/en/LogFiles.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/LogFiles.html
 
 title: "ConEmu | Debug Log Files"
+
+breadcrumbs:
+ - url: TableOfContents.html#feedback
+   title: Feedback
 ---
 
 <!-- Content starts -->
