--- a/en/MemoryDump.html
+++ b/en/MemoryDump.html
@@ -6,6 +6,10 @@ redirect_from:
 
 title: "ConEmu | MemoryDump"
 
+breadcrumbs:
+ - url: TableOfContents.html#feedback
+   title: Feedback
+
 readalso:
  - url: CrashDump.html
    title: "Automatic crash dumps"
