--- a/en/Source.html
+++ b/en/Source.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/Source.html
 
 title: "ConEmu | Source"
+
+breadcrumbs:
+ - url: TableOfContents.html#feedback
+   title: Feedback
 ---
 
 <!-- Content starts -->
