--- a/donate.html
+++ b/donate.html
@@ -66,15 +66,11 @@ AFAIK coinbase allows payments from linked Visa cards with US billing address.</
 <h2><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h2>
 <div class="text stext">Wallets: <strong>Z190363130005</strong>, <strong>E294160643493</strong>, <strong>R407008788841</strong>.</div>
 
-<h2><a name="yandex" href="https://money.yandex.ru">Yandex.Money</a></h2>
+<h2 id="yandex"><a href="https://money.yandex.ru">Yandex.Money</a></h2>
 <div class="text stext">
-Wallet: <strong>4100 1198 3971 991</strong>, the currency is Russian Rubles.<br>
-<!--10 USD ≈ 580 RUB, 10 EUR ≈ 710 RUB.<br>-->
-<!--
-<div>
-<iframe frameborder="0" allowtransparency="true" scrolling="no" src="https://money.yandex.ru/embed/small.xml?account=410011983971991&quickpay=small&any-card-payment-type=on&button-text=05&button-size=s&button-color=orange&targets=ConEmu+donation&default-sum=500&successURL=http%3A%2F%2Fconemu.github.io" width="113" height="31"></iframe>
-</div>
--->
+Wallet:
+<strong>4100 1198 3971 991</strong>,
+the currency is Russian Rubles.
 </div>
 <div class="text stext">
 Unfortunately this works only for Russia, Azerbaijan, Armenia, Belarus, Kazakhstan, Kyrgyzstan, Tajikistan, Turkmenistan, Uzbekistan, Ukraine.<br>
@@ -92,19 +88,19 @@ After you press ‘Contribute’ button you will be passed to https Yandex.Money
  <input type="hidden" name="need-email" value="false" >
  <input type="hidden" name="need-phone" value="false">
  <input type="hidden" name="need-address" value="false">
-<table class="no-border">
-<tr><td class="text Yinfo">Amount (rub):</td>
-<td><input type="number" name="sum" value="" data-type="number" ></td></tr>
-<tr><td class="text Yinfo">Comment (optional):</td>
-<td><input type="text" name="comment" value="" ></td></tr>
-<tr><td colspan="2" align="center" class="text Yinfo">
+<div class="donate-Ylabel">Amount (rub):</div>
+<div class="donate-Yfield"><input type="number" name="sum" value="" data-type="number" ></div>
+<div class="donate-Ylabel">Comment (optional):</div>
+<div class="donate-Yfield"><input type="text" name="comment" value="" ></div>
+<div class="donate-Yradio1">
  <input type="radio" name="paymentType" value="AC" checked>Visa/MasterCard</input>
+</div>
+<div class="donate-Yradio2">
  <input type="radio" name="paymentType" value="PC">Yandex.Money</input>
-</td></tr>
-<tr><td colspan="2" align="center">
+</div>
+<div class="donate-Ybutton">
  <input type="submit" name="submit-button" value="Contribute">
-</td></tr>
-</table>
+</div>
 </form>
 </div>
 </div>
