Add Amazon as donation method

--- a/donate.html
+++ b/donate.html
@@ -15,9 +15,6 @@ otherlang:
    rus: http://www.conemu.ru/donate.html
 ---
 
-
-<!-- Content starts -->
-
 <h1 id="h0">Support ConEmu development</h1>
 
 <p>ConEmu-Maximus5 was brought to life and is supported by almost single developer efforts.
@@ -37,16 +34,23 @@ and maintaining by contributing with
 or anything else, spreading the word for example. </p>
 
 
-<h2><a name="funding"></a>PayPal<a href="#funding" class="section_anchor"></a></h2>
-<div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
-e-mail <img style="position: relative; top: 0.25em;" src="/img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
-<br>and I will send you my dedicated PayPal address in response,<br>
-which may be used for ‘sending money to family or friends’.</div>
-<div class="text">That is because PayPal <strong>donations</strong> are not accepted to Russian accounts,<br>
-check an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site for details,<br>
-or you may suggest other methods there.</div>
+<h2 id="funding"> List of services </h2>
+<ul>
+	<li><a href="#amazon">Amazon.com gift cards</a></li>
+	<li><a href="#bitcoin">Bitcoin</a></li>
+	<li><a href="#flattr">Flattr microdonations</a></li>
+	<li><a href="#webmoney">WebMoney transfer</a></li>
+	<li><a href="#yandex">Yandex.Money</a></li>
+	<li><a href="#paypal">PayPal</a></li>
+</ul>
 
-<h2><a href="http://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></h2>
+<h3 id="amazon"> Amazon.com gift cards </h3>
+<div class="text"><a href="https://www.amazon.com/gp/product/B004LLIKVU/">Amazon's gift cards</a>
+may be most handy way for donations.<br/>
+Just choose your amount and type e-mail<br/>
+<img style="position: relative; top: 0.25em;" src="/img/email.png"> in the gift card details.</div>
+
+<h3 id="bitcoin"><a href="http://en.wikipedia.org/wiki/Bitcoin">Bitcoin</a></h3>
 <div class="text stext">Bitcoin is digital currency based on open-source software.
 <a href="https://bitcoin.org/en/faq">Bitcoin FAQ</a>.</div>
 <div class="text stext">Perhaps the easiest way to use it are online wallets, like <a href="https://www.coinbase.com/">coinbase</a> for example.
@@ -56,17 +60,17 @@ AFAIK coinbase allows payments from linked Visa cards with US billing address.</
 	src="/img/bitcoin-qr.png" alt="bitcoin:1F4i4YSL5yrZYuyUSWqqxQVo3pHp3fcAxc" title="Contribute via Bitcoin"
 	border="0"></img></div>
 
-<h2><a href="https://flattr.com/">Flattr microdonations</a></h2>
+<h3 id="flattr"><a href="https://flattr.com/">Flattr microdonations</a></h3>
 <div class="text stext"><a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808#c6">What is a Flattr and how it works</a>.</div>
 <div class="text">
 	<a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub"><img
 	src="/img/FlattrBadgeLarge.png" alt="Flattr ConEmu" title="Flattr ConEmu"
 	border="0"></img></a></div>
 
-<h2><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h2>
+<h3 id="webmoney"><a href="http://www.wmtransfer.com/">WebMoney transfer</a></h3>
 <div class="text stext">Wallets: <strong>Z190363130005</strong>, <strong>E294160643493</strong>, <strong>R407008788841</strong>.</div>
 
-<h2 id="yandex"><a href="https://money.yandex.ru">Yandex.Money</a></h2>
+<h3 id="yandex"><a href="https://money.yandex.ru">Yandex.Money</a></h3>
 <div class="text stext">
 Wallet:
 <strong>4100 1198 3971 991</strong>,
@@ -105,4 +109,11 @@ After you press ‘Contribute’ button you will be passed to https Yandex.Money
 </div>
 </div>
 
-<!-- Content ends -->
+<h3 id="paypal"> PayPal </h3>
+<div class="text">If you can't use <a href="#yandex">Yandex.Money</a> or other methods please contact me by<br>
+e-mail <img style="position: relative; top: 0.25em;" src="/img/email.png"> or twitter <a href="https://twitter.com/ConEmuMaximus5">@ConEmuMaximus5</a>
+<br>and I will send you my dedicated PayPal address in response,<br>
+which may be used for ‘sending money to family or friends’.</div>
+<div class="text">That is because PayPal <strong>donations</strong> are not accepted to Russian accounts,<br>
+check an <a href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1808" target="_blank">Issue 1808</a> on the project site for details,<br>
+or you may suggest other methods there.</div>
