--- a/en/GuiMacro.html
+++ b/en/GuiMacro.html
@@ -317,7 +317,7 @@ HighlightMouse(&lt;What&gt;,&lt;Act&gt;)
 <pre><code>IsRealVisible
  - Check, is RealConsole visible or not, &quot;Yes&quot;/&quot;No&quot;</code></pre>
 
-<h4><a name="Keys"></a>Post special keystrokes to the console (AutoHotKey syntax)<a href="#Keys" class="section_anchor"></a></h4>
+<h4><a name="Keys"></a>Post special keystrokes to the console (<a href="AutoHotKey.html#syntax">AutoHotKey syntax</a>)<a href="#Keys" class="section_anchor"></a></h4>
 <pre><code>Keys(&quot;&lt;Combo1&gt;&quot;[,&quot;&lt;Combo2&gt;&quot;[,...]])
  - Post special keystrokes to the console (AutoHotKey syntax)
    &quot;[Mod1[Mod2[Mod3]]]Key&quot;
