--- a/en/Screencasts.html
+++ b/en/Screencasts.html
@@ -8,7 +8,9 @@ breadcrumbs:
    title: ConEmu
 ---
 
-<!-- Content starts -->
+<h1> Video Reviews </h1>
+
+<p>Here are some ConEmu's video reviews, created by non-affiliated users. </p>
 
 <p>Take a look at <a href="Screenshots.html">screenshots</a>. </p>
 
@@ -38,5 +40,3 @@ breadcrumbs:
 </iframe>
  </p>
 <p>Read about <a href="http://seleniumsimplified.com/get-started/" rel="nofollow">Selenium simplified</a>. </p>
-
-<!-- Content ends -->
