--- a/en/Screenshots.html
+++ b/en/Screenshots.html
@@ -40,16 +40,11 @@ screenshots:
    src:  ConEmuSuDo1.png
 ---
 
-<!-- Content starts -->
-
-<noindex>
-<p>Take a look at <a href="Screencasts.html">screencasts</a>. </p>
-</noindex>
-
 <h1>ConEmu screenshots</h1>
 
 <p>Take a look at ConEmu window screenshots below. </p>
 <p>Screenshots of Settings dialog are located <a href="Settings.html">here</a>. </p>
+<p>Also, some <a href="Screencasts.html">screencasts</a> are available. </p>
 
 {% for img in page.screenshots %}
 <h3>{{ img.title }}</h2>
@@ -118,5 +113,3 @@ screenshots:
 
 <h4><a name="Confirmation_of_restarting_console_(Win-~)"></a>Confirmation of restarting console (Win-~)<a href="#Confirmation_of_restarting_console_(Win-~)" class="section_anchor"></a></h4>
 <p><img src="../img/ConEmuReCreate.png" title="ConEmu confirmation of restarting console" alt="ConEmu restart console"> </p>
-
-<!-- Content ends -->
